# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
src/: ConverterJSON.cpp  ConverterJSON.h  SearchEngine.cpp  SearchEngine.h  SearchServer.h  coopFunc.cpp  coopFunc.h  main.cpp
src/dto/: AnswersDTO.cpp  AnswersDTO.h  ConfigDTO.cpp  ConfigDTO.h  Document.cpp  Document.h  Indexer.cpp  Indexer.h  RequestDTO.cpp  RequestDTO.h
tests/: CMakeLists.txt  test_search.cpp
